syntax = "proto3";

package proto;
option go_package = "https://example.com/;proto";

message User {
    string id = 1;
    string name = 2;
    int32 t = 3;
}
message Message {
    string id = 1;
    string content = 2;
    int32 timestamp = 3;
    string userName = 4;
}
message Connect {
    User user = 1;
    bool active = 2;
}

message Close {}

service Broadcast {
    rpc CreateStream(Connect) returns (stream Message);
    rpc BroadcastMessage(Message) returns (Close);
}